7-launchtemplate.tf
resource "aws_launch_template" "salsaSunday-LT-80" {
  name_prefix   = "salsaSunday-LT-80"
  image_id      = "ami-038bba9a164eb3dc1"
  instance_type = "t2.micro"

  #key_name = "MyLinuxBox"

  vpc_security_group_ids = [aws_security_group.salsaSunday-TG01-SG01-80.id]

  user_data = base64encode(<<-EOF
    #!/bin/bash
    yum update -y
    yum install -y httpd
    systemctl start httpd
    systemctl enable httpd

    # Get the IMDSv2 token
    TOKEN=$(curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")

    # Background the curl requests
    curl -H "X-aws-ec2-metadata-token: $TOKEN" -s http://169.254.169.254/latest/meta-data/local-ipv4 &> /tmp/local_ipv4 &
    curl -H "X-aws-ec2-metadata-token: $TOKEN" -s http://169.254.169.254/latest/meta-data/placement/availability-zone &> /tmp/az &
    curl -H "X-aws-ec2-metadata-token: $TOKEN" -s http://169.254.169.254/latest/meta-data/network/interfaces/macs/ &> /tmp/macid &
    wait

    macid=$(cat /tmp/macid)
    local_ipv4=$(cat /tmp/local_ipv4)
    az=$(cat /tmp/az)
    vpc=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" -s http://169.254.169.254/latest/meta-data/network/interfaces/macs/$macid/vpc-id)

    # Create HTML file
    cat <<-HTML > /var/www/html/index.html
    <!doctype html>
    <html lang="en" class="h-100">
    <head>
    <title>Details for port 80 EC2 instance</title>
    </head>
    <body>
    <div>
    <h1>Kora-less Theo</h1>
    <h1>Heading down the mountain in North California</h1>
    
    <div class="tenor-gif-embed" data-postid="18507343" data-share-method="host" data-aspect-ratio="0.525" data-width="50%"><a href="https://tenor.com/view/im-sola-korean-motor-model-asian-gif-18507343">Im Sola Korean GIF</a>from <a href="https://tenor.com/search/im+sola-gifs">Im Sola GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>

    <p><b>Instance Name:</b> $(hostname -f) </p>
    <p><b>Instance Private Ip Address: </b> $local_ipv4</p>
    <p><b>Availability Zone: </b> $az</p>
    <p><b>Virtual Private Cloud (VPC):</b> $vpc</p>
    </div>
    </body>
    </html>
    HTML

    # Clean up the temp files
    rm -f /tmp/local_ipv4 /tmp/az /tmp/macid
  EOF
  )

  tag_specifications {
    resource_type = "instance"
    tags = {
      Name    = "salsaSunday-LT-80"
      Service = "application1"
      Owner   = "Chewbacca"
      Planet  = "Mustafar"
    }
  }

  lifecycle {
    create_before_destroy = true
  }
}
